Building up the why website

--- a/src/pages/why.astro
+++ b/src/pages/why.astro
@@ -11,49 +11,201 @@ import MainLayout from "../layouts/MainLayout.astro";
   </section> -->
 
   <!-- Rest of page -->
-  <main class="container mx-auto p-4 bg-[#2D2C2C] grid grid-cols-12">
-    <section class="col-start-3 col-span-3">
-      <p
-        class="text-[#E9F422] lg:text-4xl mb-4 lg:mb-10"
-        style=" font-family: 'La Belle Aurore', cursive;"
-      >
-        Why use it?
-      </p>
-      <p
-        class="text-[#F2ECD5] lg:text-8xl"
-        style="font-family: 'Bowlby One SC', sans-serif;"
-      >
-        WHY INSTANT PHOTOGRAPHY
-      </p>
-    </section>
-    <section class="col-span-8 col-start-3 mt-10 p-10">
-      <img src="/public/images/film-img.png" alt="" />
-      <p
-        class="text-[#F2ECD5] lg:text-1xl m-10"
-        style="font-family: 'Bowlby One SC', sans-serif;"
-      >
-        Instant Photography is a testament to life: It all started back in the
-        1940’s with a 3 year old kid. She wanted to see her fathers images right
-        away. The father, Edwin Land, embarked on a mission: To invent instant
-        photography. Half a decade later, Edwin Land launched Instant
-        photography and established the Polaroid brand. Instant photography
-        turned into big business in the 70’s and 80’s, until the digital era
-        almost killed the industry. The massive amount of time wasted on the
-        small screens have spurred a counterreaction: Analogue, off-line
-        experiences have become popular again. And instant photography is just
-        that: An analogue, life-affirming and tactile photography experience. So
-        let’s celebrate life, and make memories:-)
-      </p>
-    </section>
-    <section class="col-span-8 col-start-3 mt-10 p-10">
-      <p>
-        Edwin Herbert Land was an American scientist and inventor,best known as
-        the co-founder of the Polaroid Corporation. He invented inexpensive
-        filters for polarizing light, a practical system of in-camera instant
-        photography, and the retinex theory of color vision, among other things.
-        His Polaroid instant camera went on sale in late 1948 and made it
-        possible for a picture to be taken and developed in 60 seconds or less.
-      </p>
-    </section>
-  </main>
+  <body>
+    <main class="bg-[#2D2C2C]">
+      <section class="grid grid-cols-12">
+        <div class="col-span-12 m-auto lg:col-start-3 lg:col-span-3">
+          <h4
+            class="text-[#E9F422] text-2x1 lg:text-4xl mb-2 lg:mb-10"
+            style=" font-family: 'La Belle Aurore', cursive;"
+          >
+            Why use it?
+          </h4>
+          <h2
+            class="text-[#F2ECD5] lg:text-8xl"
+            style="font-family: 'Bowlby One SC', sans-serif;"
+          >
+            WHY INSTANT PHOTOGRAPHY
+          </h2>
+        </div>
+        <div class="col-span-8 col-start-3 mt-5 lg:mt-10">
+          <img src="/images/film-img.png" alt="" />
+          <p
+            class="text-[#F2ECD5] lg:text-1xl m-5 lg:m-10"
+            style="font-family: 'Bowlby One SC', sans-serif;"
+          >
+            Instant Photography is a testament to life: It all started back in
+            the 1940’s with a 3 year old kid. She wanted to see her fathers
+            images right away. The father, Edwin Land, embarked on a mission: To
+            invent instant photography. Half a decade later, Edwin Land launched
+            Instant photography and established the Polaroid brand. Instant
+            photography turned into big business in the 70’s and 80’s, until the
+            digital era almost killed the industry. The massive amount of time
+            wasted on the small screens have spurred a counterreaction:
+            Analogue, off-line experiences have become popular again. And
+            instant photography is just that: An analogue, life-affirming and
+            tactile photography experience. So let’s celebrate life, and make
+            memories:-)
+          </p>
+        </div>
+      </section>
+      <section class="grid grid-cols-12 relative">
+        <div class="col-span-12">
+          <img
+            src="/images/ellipse-bg.png"
+            class="relative w-full overflow-hidden mb-10 lg:mb-20"
+            alt=""
+          />
+        </div>
+        <div class="grid grid-cols-12 absolute mt-20 lg:mt-40">
+          <h3
+            class="text-[#2D2C2C] text-4xl col-start-4 lg:text-7xl lg:col-start-5"
+            style="font-family: 'Bowlby One SC', sans-serif;"
+          >
+            EDWIN
+          </h3>
+          <h3
+            class="text-[#2D2C2C] text-4xl lg:text-7xl col-start-8 mt-6 lg:mt-10"
+            style="font-family: 'Bowlby One SC', sans-serif;"
+          >
+            LAND
+          </h3>
+          <h4
+            class="text-[#E9F422] text-1x1 lg:text-2xl absolute col-start-8"
+            style=" font-family: 'La Belle Aurore', cursive;"
+          >
+            The brain behind
+          </h4>
+          <h4
+            class="text-[#E9F422] text-1x1 lg:text-2xl col-start-4 lg:col-start-5 absolute mt-10 lg:mt-20"
+            style=" font-family: 'La Belle Aurore', cursive;"
+          >
+            Instant Photography
+          </h4>
+        </div>
+        <div class="absolute flex col-start-2 mt-50 lg:mt-80">
+          <p
+            class="text-[#2D2C2C] text-xs lg:text-2xl"
+            style="font-family: 'Bowlby One SC', sans-serif;"
+          >
+            Edwin Herbert Land was an American scientist and inventor,best known
+            as the co-founder of the Polaroid Corporation. He invented
+            inexpensive filters for polarizing light, a practical system of
+            in-camera instant photography, and the retinex theory of color
+            vision, among other things. His Polaroid instant camera went on sale
+            in late 1948 and made it possible for a picture to be taken and
+            developed in 60 seconds or less.
+          </p>
+          <img
+            src="/images/edwindland.png"
+            class="col-start-3 w-40 lg:w-80 object-scale-down mr-10 ml-5 lg:mr-30 lg:ml-10 -rotate-10"
+            alt=""
+          />
+        </div>
+      </section>
+      <div class="grid grid-cols-12">
+        <img
+          src="/images/photo-1.png"
+          class="col-start-4 col-span-3 lg:h-90 lg:w-80"
+          alt=""
+        />
+        <img
+          src="/images/photo-2.png"
+          class="col-start-8 col-span-3 mt-40 mb-20"
+          alt=""
+        />
+      </div>
+      <section class="bg-[#B59A86] grid grid-cols-12 pt-20 pb-20">
+        <h2
+          class="text-5x1 lg:text-7xl col-start-3 col-span-8"
+          style="font-family: 'Bowlby One SC', sans-serif;"
+        >
+          HOW DOES IT WORK?
+        </h2>
+        <p
+          class="text-[#2D2C2C] lg:text-2xl col-start-3 col-span-8 mt-5"
+          style="font-family: 'Bowlby One SC', sans-serif;"
+        >
+          To use a Polaroid camera, you insert the instant film pack, frame your
+          subject, and press the shutter button. The camera then uses rollers to
+          squeeze a developer from a capsule onto the light-sensitive film,
+          which contains dyes that spread and form the image. The image then
+          emerges from the camera with a protective layer, like a gray haze,
+          that disappears as the internal chemistry develops the image. You
+          shouldn't shake it, but rather let it develop at a stable temperature
+          for about 15 minutes to an hour.
+        </p>
+      </section>
+      <section class="flex flex-row flex-wrap justify-center lg:flex-nowrap">
+        <div class="m-10 p-5">
+          <img
+            src="/images/guide-1.png"
+            class="w-40 h-40 m-auto hover:scale-110"
+            alt=""
+          />
+          <p class="text-[#F2ECD5]">
+            Put the film in and wait for the camera to print out a black sheet
+          </p>
+        </div>
+        <div class="m-10 p-5">
+          <img
+            src="/images/guide-2.png"
+            class="w-40 h-40 m-auto hover:scale-110"
+            alt=""
+          />
+          <p class="text-[#F2ECD5]">
+            Press the red button, and watch your picture emerge
+          </p>
+        </div>
+        <div class="p-5 m-10">
+          <img
+            src="/images/guide-3.png"
+            class="w-40 h-40 m-auto hover:scale-110"
+            alt=""
+          />
+          <p class="text-[#F2ECD5]">
+            Place the newly printed frame on a surface with the backside up
+          </p>
+        </div>
+        <div class="p-5 m-10">
+          <img
+            src="/images/guide-4.png"
+            class="w-40 h-40 m-auto hover:scale-110"
+            alt=""
+          />
+          <p class="text-[#F2ECD5]">
+            Wait 15-20 minutes before the photo is ready.
+          </p>
+        </div>
+      </section>
+      <section class="grid grid-cols-12 relative">
+        <div class="col-span-12 m-auto z-1">
+          <p
+            class="text-[#E9F422] text-2xl lg:text-4xl mt-40"
+            style=" font-family: 'La Belle Aurore', cursive;"
+          >
+            Perfectly imperfect.
+          </p>
+          <p
+            class="text-[#E9F422] text-2xl lg:text-4xl"
+            style=" font-family: 'La Belle Aurore', cursive;"
+          >
+            Just like the moment
+          </p>
+        </div>
+        <div class="z-0 mb-100 lg:mb-160">
+          <img
+            src="/images/photo-3.png"
+            class="w-40 lg:w-80 object-scale-down absolute top-0"
+            alt=""
+          />
+          <img
+            src="/images/photo-4.png"
+            class="w-60 lg:w-70 object-scale-down absolute right-0"
+            alt=""
+          />
+        </div>
+      </section>
+    </main>
+  </body>
 </MainLayout>
