--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,17 +4,17 @@ import Heading from "../components/Heading.astro";
 <footer class="relative w-full bg-cover bg-center py-10"
     style="background-image: url('/images/hero_img.png');">
     <!-- a elementer -->
-   <section  class="flex flex-wrap justify-center gap-x-8 lg:gap-x-12">
-<a href="/" class="text-[#2D2C2C] pb-5 text-sm lg:text-2xl hover:text-[#e9f422]" style="font-family: 'Bowlby One SC', sans-serif;">I'm in</a>
-<a href="/why" class="text-[#2D2C2C] pb-5 text-sm  lg:text-2xl hover:text-[#e9f422]" style="font-family: 'Bowlby One SC', sans-serif;">Why instants</a>
-<a href="/winners" class="text-[#2D2C2C] pb-5 text-sm lg:text-2xl hover:text-[#e9f422]" style="font-family: 'Bowlby One SC', sans-serif;">Winners</a>
-<a href="/about" class="text-[#2D2C2C] pb-5 text-sm  lg:text-2xl hover:text-[#e9f422]" style="font-family: 'Bowlby One SC', sans-serif;">About</a>
-<a href="/terms" class="text-[#2D2C2C] pb-5 text-sm lg:text-2xl hover:text-[#e9f422]" style="font-family: 'Bowlby One SC', sans-serif;">Terms & conditions</a>
+   <section  class="flex flex-wrap justify-center gap-x-8 lg:gap-x-12 font-paragraph font-bold lg:text-xl">
+<a href="/" class="text-[#2D2C2C] pb-5 hover:text-[#e9f422]">I'm in</a>
+<a href="/why" class="text-[#2D2C2C] pb-5 hover:text-[#e9f422]">Why instants</a>
+<a href="/winners" class="text-[#2D2C2C] pb-5 hover:text-[#e9f422]">Winners</a>
+<a href="/about" class="text-[#2D2C2C] pb-5 hover:text-[#e9f422]">About</a>
+<a href="/terms" class="text-[#2D2C2C] pb-5 hover:text-[#e9f422]">Terms & conditions</a>
 </section> 
 
 <div class="text-center mt-10 px-2 lg:mt-10 lg:px-10 grid grid-cols-12">
     <Heading htmlheading="h4" size="xxsmall" font="h4" stylingclasses="mb-4 lg:mb-2 col-start-5 col-span-4 text-center">Let's celebrate</Heading>
-    <p class="text-[#2D2C2C] text-sm lg:text-xl px-20 col-start-1 col-span-12 lg:col-start-3 lg:col-span-8" style="font-family: 'Bowlby One SC', sans-serif;">October 18 is Instant Day - a day all about celebrating instant photography</p>
+    <p class="text-[#2D2C2C] text-sm lg:text-2xl px-20 col-start-1 col-span-12 lg:col-start-3 lg:col-span-8" style="font-family: 'Bowlby One SC', sans-serif;">October 18 is Instant Day - a day all about celebrating instant photography</p>
 </div>
 
 <!-- logo -->
