--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,8 +115,8 @@ import Button from "../components/Button.astro";
   </div>
 </section>
 <section class="bg-[url(/images/ready_t_upload_bg.png)] bg-cover">
-  <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 pt-20">
-    <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-2 col-span-10 text-center intersect:animate-fade-up intersect:duration-3000">Ready to upload?</Heading>
+  <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 pt-20 ">
+    <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-2 col-span-10 text-center">Ready to upload?</Heading>
         <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-7 col-span-7 -mt-2 lg:-mt-5">Fill out the form below...</Heading>
   </div>
 <div class="pb-10 lg:pb-20">
