--- a/src/pages/why.astro
+++ b/src/pages/why.astro
@@ -2,7 +2,6 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
-import Header from "../components/Header.astro";
 ---
 
 <MainLayout title="Titel">
@@ -49,7 +48,7 @@ import Header from "../components/Header.astro";
         <div class="col-span-12">
           <img
             src="/images/ellipse-bg.png"
-            class="relative w-full mb-10 lg:mb-20"
+            class="relative w-full bg-cover mb-10 lg:mb-20"
             alt=""
           />
         </div>
